# rhbot

./: Cargo.toml
src/: commands.rs  main.rs
src/utils/: json.rs
