[package]
name = "rhbot"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1"
teloxide = { version = "0.12", features = ["full"] }
tokio = { version = "1", features = ["full"] }
log = "0.4"
pretty_env_logger = "0.5"
serde = { version = "1", features = ["derive"] }
serde_json = { version = "1", features = ["preserve_order"] }
